replace JWT key with process.env.variable

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "npx nodemon -r dotenv/config index.js",
-    "start": "npm -r dotenv/config index.js"
+    "start": "node -r dotenv/config index.js"
   },
   "author": "",
   "license": "ISC",
